# Attrition-Analytics

./: .env  .gitignore  README.md  main.py  presentation-outline.md  presentation-script.md  pyproject.toml  render.yaml  requirements.txt
Datasets/: Dataset_gen_new.py  attrition_events.csv  db_Test.py  employees.csv  monthly_metrics.csv
attrition-backend/: README.md  app.py  chatbot.py  test_plot.py
attrition-frontend/: README.md  index.html  package-lock.json  package.json
attrition-frontend/src/: App.tsx  main.tsx
attrition-frontend/src/components/: Navbar.tsx
attrition-frontend/src/components/chat/: ChatHeader.tsx  DatasetImportModal.tsx
attrition-frontend/src/components/dashboard/: AttritionChart.tsx  DashboardTabs.tsx  EnhancedFilters.tsx  FactorsChart.tsx  FilteredDashboard.tsx  PredictiveFactorsChart.tsx
attrition-frontend/src/components/layout/: NavHeader.tsx
attrition-frontend/src/components/ui/: sidebar-toggle.tsx
attrition-frontend/src/components/upload/: DatabaseConnectionCard.tsx  DatabaseConnectionsList.tsx
attrition-frontend/src/pages/: Chat.tsx  Dashboard.tsx  Landing.tsx  Upload.tsx
attrition-frontend/src/pages/backup/: Chat backup 1.tsx  Chat backup 2.tsx
attrition-frontend/src/services/: api.ts
attrition-frontend/src/styles/: chat.css  global.css  markdown.css  sidebar.css
