[project]
name = "attrition-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
