[project]
name = "attrition-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "faker>=37.3.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
